Modificado o arquivo application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=legalProject
-spring.datasource.url=jdbc:postgresql://ep-old-leaf-a8vitecj-pooler.eastus2.azure.neon.tech/legalProject?user=legalProject_owner&password=npg_SdwvEB91lQgf&sslmode=require
+spring.datasource.url=jdbc:postgresql://localhost:5432/legalProject
+spring.datasource.username=amin
+spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
